# Mandelbrot-Viewer

./: CMakeLists.txt  README.md  mandelbrot.cpp
